--- a/src/main/resources/templates/fragments/modal-fragments.html
+++ b/src/main/resources/templates/fragments/modal-fragments.html
@@ -119,6 +119,11 @@
                         <textarea class="form-control" rows="3" name="address" id="address" required
                                   placeholder="Enter address"></textarea>
                     </div>
+                    <div class="form-group">
+                        <label for="fingerprintId">Fingerprint Id</label>
+                        <input type="tel" class="form-control" id="fingerprintId" name="fingerprintId" required
+                               placeholder="Enter Fingerprint Id">
+                    </div>
                 </div>
                 <div class="modal-footer justify-content-between">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
