--- a/src/main/resources/templates/voting-form.html
+++ b/src/main/resources/templates/voting-form.html
@@ -43,66 +43,51 @@
                                 <!--                                </div>-->
                             </div>
                             <!-- /.card-header -->
-                            <div class="card-body">
-                                <table id="example1" class="table table-bordered table-striped">
-                                    <thead>
-                                    <tr>
-                                        <th>Political Party</th>
-                                        <th>Number</th>
-                                        <th>Full Name</th>
-                                        <th>Vote</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <th>Sri Lanka Freedom Party(SLFP)</th>
-                                        <th>5</th>
-                                        <td>John Smith</td>
-                                        <td>
-                                            <div class="form-group">
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox">
-                                                    <!--                                                    <label class="form-check-label">Vote</label>-->
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
+                            <form th:action="@{vote-request}" method="post">
+                                <input type="text" hidden name="electionId" th:value="${election.getId()}">
+                                <div class="card-body">
+                                    <table id="example1" class="table table-bordered table-striped">
+                                        <thead>
+                                        <tr>
+                                            <th></th>
+                                            <th>Political Party</th>
+                                            <th>Number</th>
+                                            <th>Full Name</th>
+                                            <th>Vote</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
 
-                                    <tr>
-                                        <th>Sri Lanka Freedom Party(SLFP)</th>
-                                        <th>2</th>
-                                        <td>Sirisena</td>
-                                        <td>
-                                            <div class="form-group">
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox">
-                                                    <!--                                                    <label class="form-check-label">Vote</label>-->
+                                        <tr th:id="'el_table_row_'+${ec.getId()}"
+                                            th:each="ec,iterationStatus:${ecs}">
+                                            <td></td>
+                                            <td th:text="${ec.getElectionParty().getNameToDisplay()}"></td>
+                                            <td th:text="${ec.getElectionNumber()}"></td>
+                                            <td th:text="${ec.getFullName()}"></td>
+                                            <td>
+                                                <div class="form-group">
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" name="electionCandidates" th:value="${ec.getElectionCandidateId()}" type="checkbox" onchange="addValue(this.value)">
+                                                        <!--                                                    <label class="form-check-label">Vote</label>-->
+                                                    </div>
                                                 </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th>Sri Lanka Freedom Party(SLFP)</th>
-                                        <th>10</th>
-                                        <td>Mahinda Rajapaksha</td>
-                                        <td>
-                                            <div class="form-group">
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox">
-                                                    <!--                                                    <label class="form-check-label">Vote</label>-->
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                            <div id="voteForm">
-                                <div class="row m-2">
-                                    <div class="col-6">
-                                        <button type="submit" class="btn btn-success btn-lg form-control">SAVE</button>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <div id="voteForm" hidden>
+                                    <div class="row m-2">
+                                        <div class="col-12">
+                                            <button type="submit" class="btn btn-success btn-lg form-control">SAVE</button>
+                                        </div>
                                     </div>
-                                    <div class="col-6">
+                                </div>
+                            </form>
+
+                            <div id="voteForm2" hidden>
+                                <div class="row m-2">
+                                    <div class="col-12">
                                         <button type="submit" class="btn btn-danger btn-lg form-control">CANCEL MY VOTE
                                         </button>
                                     </div>
@@ -168,21 +153,33 @@
     /*]]>*/
 </script>
 <script>
-    $( document ).ready(function() {
+    $(document).ready(function () {
         let vt = localStorage.getItem('vt');
-        if (vt==1){
+        if (vt == 1) {
             setVisibleTrue();
-        }else{
+        } else {
             setVisibleFalse();
         }
     });
 
-    function setVisibleFalse(){
+    function setVisibleFalse() {
         document.getElementById('voteForm').hidden = true;
+        document.getElementById('voteForm2').hidden = true;
     }
 
-    function setVisibleTrue(){
+    function setVisibleTrue() {
         document.getElementById('voteForm').hidden = false;
+        document.getElementById('voteForm2').hidden = false;
+    }
+</script>
+<script>
+    function addValue(value){
+        let values = document.getElementById('ids').value;
+        let split = values.split(',');
+        if (split)
+        for (let i=0;i<split.length;i++){
+
+        }
     }
 </script>
 </body>
