--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>EVS | Log in</title>
+    <title>SES | Log in</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -19,12 +19,12 @@
 <body class="hold-transition login-page">
 <div class="login-box">
     <!-- /.login-logo -->
-    <div class="card card-outline card-primary">
+    <div class="card card-info">
         <div class="card-header text-center">
-            <a th:href="@{/login}" class="h1"><b>Election Voting</b> System</a>
+            <a th:href="@{/login}" class="h1"><b>Fingerprint-based Smart Election System</b></a>
         </div>
         <div class="card-body">
-            <p class="login-box-msg">Sign in to start your session</p>
+            <p class="login-box-msg"><b>Log in to start your session</b></p>
 
             <form th:action="@{/login-request}" method="post">
                 <div class="input-group mb-3">
@@ -54,7 +54,7 @@
 <!--                    </div>-->
                     <!-- /.col -->
                     <div class="col-12">
-                        <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+                        <button type="submit" class="btn btn-info btn-block">Sign In</button>
                     </div>
                     <!-- /.col -->
                 </div>
